# Mini-Redis

./: .gitignore  README.md  pyproject.toml  question.md
src/mini_redis/: bootstrap.py  cli_main.py  config.py  server_main.py  types.py
src/mini_redis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/mini_redis/cli/: client.py  parser.py
src/mini_redis/commands/: catalog.py  commands.md  manager.py  queue.py
src/mini_redis/commands/handlers/: base.py  benchmark.py  bgrewriteaof.py  bgsave.py  config.py  delete.py  dumpall.py  exists.py  expire.py  flushdb.py  get.py  help.py  incr.py  info.py  inspect.py  invalidate.py  keys.py  load.py  mget.py  ping.py  probe.py  quit.py  repairaof.py  rewriteaof.py  save.py  set.py  ttl.py
src/mini_redis/engine/: redis.py
src/mini_redis/invalidation/: __init__.py  invalidation.md  manager.py
src/mini_redis/network/: network.md  tcp_client.py  tcp_server.py  timing.py
src/mini_redis/persistence/: aof.py  invalidation.py  manager.py  meta.py  rdb.py
src/mini_redis/protocol/: resp.md  resp.py
src/mini_redis/storage/: benchmark.py  manager.py  mongo_adapter.py  mongo_manager.py  mongoredis.md  ttl.py
tests/: test_cli_client.py  test_cli_parser.py  test_command_flow.py  test_command_manager.py  test_inspect_tcp.py  test_mongo_integration.py  test_resp_codec.py  test_storage_manager.py  test_tcp_roundtrip.py  test_ttl_manager.py
