[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-redis"
version = "0.1.0"
description = "A minimal Redis-like server with CLI, TCP, RESP, and modular command routing."
requires-python = ">=3.9"
dependencies = ["pymongo>=4.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mini-redis-server = "mini_redis.server_main:main"
mini-redis-cli = "mini_redis.cli_main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
